--- a/packages/read-contract/styles/globals.css
+++ b/packages/read-contract/styles/globals.css
@@ -48,19 +48,27 @@ input {
 	margin: 2em auto;
 	display: grid;
 	grid-template-columns: auto 1fr;
-	gap: 1em 2em;
 }
 
-.operation-item {
-	display: flex;
+.operation-name,
+.operation-value {
+	padding: 0.5em;
 }
 
-.operation-name {
-	color: black;
+.operation-name:hover {
+	color: green;
+	text-decoration: underline;
+	cursor: pointer;
 }
 
 .operation-value {
 	color: blue;
+}
+
+.operation-name.operation--highlight,
+.operation-name.operation--highlight + .operation-value {
+	background: darkblue;
+	color: white;
 }
 
 @media screen and (min-width: 960px) {
