--- a/packages/read-contract/styles/globals.css
+++ b/packages/read-contract/styles/globals.css
@@ -4,6 +4,7 @@ body {
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
 		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	zoom: 150%;
 }
 
 a {
@@ -69,6 +70,7 @@ input {
 .operation-name.operation--highlight + .operation-value {
 	background: darkblue;
 	color: white;
+	order: -1;
 }
 
 @media screen and (min-width: 960px) {
